@@ -1,3 +1,7 @@
+2011-05-04  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_igh.c: Added goodes interrupted homolosine (#106).
+
 2011-03-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_gridlist.c: avoid possible buffer overflow.
